# FirstPartyOracle

./: .gitignore  Cargo.toml  ClientConfigs.json  README.md  RetrieverConfig.json
frontend/: .gitignore  README.md  package.json  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  Router.js
frontend/src/components/: Footer.js  Header.js  Layout.js  Loading.js  Message.js  Oracles.js  Retrievers.js  index.js
frontend/src/context/: config.js  globalState.js
frontend/src/pages/: Config.js  Config1.js  Config2.js  Config3.js  Config4.js  ConfigRetriever.js  FetchResults.js  index.js
frontend/src/styles/: index.scss
frontend/src/styles/components/: buttons.scss  form.scss  layout.scss  list.scss  text.scss
frontend/src/styles/helpers/: variables.scss
src/: lib.rs  main.rs
src/client/: client.rs  mod.rs  retriever.rs
src/config/: config.rs
src/http/: api_server.rs  handler.rs  mod.rs  request.rs
src/message/: message.rs
src/store/: client_store.rs  mod.rs  retriever_store.rs
src/threads/: executor.rs  mod.rs
