[package]
name = "Oracle"
version = "0.1.0"
authors = ["DyrellC <dyrell.chapman@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch="v1.0.1" }
tokio = { version = "1.0.2", features = ["full"] }
anyhow = { version = "1.0.26", default-features = false }
rand = "0.7.3"
ureq = { version = "2.0.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.2"
hyper = { version = "0.13.9" }